# Hando

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.js  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
desktop/: README.md  index.html  package-lock.json  package.json
desktop/scripts/: build-dist.mjs  build-portable.mjs  copy-sidecar-deps.mjs  fetch-node.sh  make-portable.ps1
desktop/src/: fs.ts  ipc.ts  main.ts  state.ts  style.css
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: batch.rs  commands.rs  lib.rs  main.rs  sidecar.rs  trash.rs
desktop/src-tauri/tests/: integration.rs  ipc_schema.rs
desktop/src/ui/: theme.ts  (+5 more)
docs/: bench-results.md  calibration.md  goal-learnings.md  goal-results.md  goal.md  release-checklist.md  rubric.md
scripts/: build-dist.mjs  gen-installer-header.mjs
src/: config.js  config.test.js  encoder.js  encoder.test.js  ipc.ts  sidecar.js  sidecar.test.js  state.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: bench.rs
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  lib.rs  trash.rs
src-tauri/src/encoder/: auto.rs  avif.rs  decode.rs  icc.rs  jpeg.rs  judge.rs  metadata.rs  mod.rs  png.rs  webp.rs
src-tauri/tests/: integration.rs
src-tauri/tests/fixtures/: README.md  generate.rs  with_icc.avif
src-tauri/tests/snapshots/: ipc_schema__companion_error_payload_schema.snap  ipc_schema__file_error_payload_schema.snap  ipc_schema__file_skipped_payload_schema.snap  ipc_schema__trash_fallback_payload_schema.snap
src/ui/: settings.ts  theme.ts
src/util/: path.ts
(+39 files in other folders)
