[package]
name = "desktop"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "hando"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hando"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
anyhow = "1.0.102"
trash = "5"
tauri-plugin-fs = "2"
dirs-next = "2"
tauri-plugin-dialog = "2"

# Image processing — Rust-native encoders
image = { version = "0.25", default-features = false, features = ["png", "webp", "avif", "jpeg"] }
mozjpeg = "0.10"
oxipng = { version = "10", default-features = false, features = ["parallel"] }
imagequant = "4"
webp = "0.3"
ravif = { version = "0.13", default-features = false, features = [] }
rgb = "0.8"
kamadak-exif = "0.6"
num_cpus = "1"
thiserror = "2"
tempfile = "3"

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "unwind"

[[example]]
name = "generate-fixtures"
path = "tests/fixtures/generate.rs"
required-features = ["generate-fixtures"]

[features]
generate-fixtures = []

